update user after login git